--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -508,7 +508,7 @@
     max-width: 1350px; /* same width as Belief .belief-content */
     margin: 0 auto;    /* true horizontal centering */
     text-align: center;
-    transform: translate(-50px, -80px);
+    transform: translate(-60px, -80px);
 /*    transform: translateX(-50px);*/
     /* if it needs to go right instead of left, use +20px */
   }
@@ -543,6 +543,11 @@
   }
   /* === BOTTOM VIDEO TEXT LEFT === */
   .bottom-video-text {
+    position: relative;
+    left: -60px;
+  }
+
+  .clean-footer .copyright {
     position: relative;
     left: -60px;
   }
